[gd_scene load_steps=3 format=3 uid="uid://c1x2n3m4b5v6c7x8d9"]

[ext_resource type="Script" path="res://scripts/player/CharacterPartySelection.gd" id="1_abc123"]
[ext_resource type="Theme" path="res://assets/themes/player_creation_theme.tres" id="2_def456"]

[node name="CharacterPartySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_def456")
script = ExtResource("1_abc123")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Character & Party Selection"
horizontal_alignment = 1
theme_type_variation = &"HeaderLarge"

[node name="Spacer1" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="SaveDataInfo" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="SaveStatusLabel" type="Label" parent="MainContainer/SaveDataInfo"]
layout_mode = 2
text = "No saved characters found"
horizontal_alignment = 1
theme_type_variation = &"HeaderMedium"

[node name="CharacterList" type="VBoxContainer" parent="MainContainer/SaveDataInfo"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/SaveDataInfo/CharacterList"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterListContainer" type="VBoxContainer" parent="MainContainer/SaveDataInfo/CharacterList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="CreateNewButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(180, 50)
text = "Create New Character"

[node name="Spacer" type="Control" parent="MainContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(20, 0)

[node name="LoadSelectedButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(180, 50)
disabled = true
text = "Load Selected"

[node name="Spacer3" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="BackButton" type="Button" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Back to Menu"
alignment = 1